# hideseek_turtlebot

./: CMakeLists.txt  README.md  package.xml
colors/: player_colors.txt
launch/: amcl_3dsensor.launch  frontier_exploration.launch  hideseek.launch  hideseek_turtlebot.launch  hideseek_workstation.launch  stage.launch
maps/: hiding_places.xml  maze_map.world  maze_map.yaml
src/: explore_goal.py  greeting_state.py  hide_state.py  hide_timeout_state.py  hideseek_smach.py  hiding_places.py  human_found_state.py  key_input.py  parse_hiding_places.py  robot_found_state.py  seek_state.py  seek_timeout_state.py  setup_state.py  startgreeting_state.py
