<?xml version="1.0"?>
<package>
  <name>hideseek_turtlebot</name>
  <version>1.0.0</version>
  <description>This package implements functionality to play hide-and-seek with a Turtlebot using the frontier_exploration package.</description>

  <maintainer email="flemichl@oregonstate.edu">Chloe Fleming</maintainer>

  <license>BSD</license>
  <author email="flemichl@oregonstate.edu">Chloe Fleming</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>